--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -1,21 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Episodes</h1>
 
-<table>
-  <tbody>
-    <% @episodes.each do |episode| %>
-      <tr>
-        <td> <%= image_tag episode.image.url(:thumb) %></td>
-        <td><%= episode.title %></td>
-        <td><%= link_to 'Show', episode %></td>
-        <td><%= link_to 'Edit', edit_episode_path(episode) %></td>
-        <td><%= link_to 'Destroy', episode, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Welcome to the Oakdrive experience</h1>
+      <p>This is just a place holder all this will be styled all nice later on.</p>
+      <p>Damn dude these tracks are fiyah. "ask not"?! what? forgetaboutit.</p>
+    </div>
+  </div>
 
-<br>
+<div class="episode-index"
+      style="text-align:center">
 
-<%= link_to 'New Episode', new_episode_path %>
+  <div style="text-align:left">
+    <h1>Episodes</h1>
+  </div>
+
+      <% @episodes.each do |episode| %>
+        <div class="col-md-3">
+          <%= link_to image_tag(episode.image.url(:thumb)), episode %>
+          <div class="">
+            <h4><%= episode.title %></h4>
+            <p><%= episode.description %></p>
+
+            <%= link_to 'Destroy', episode_path(episode),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %>
+          </div>
+        </div>
+
+        <% end %>
+      </div>
+</div>
