--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">
+  <div class="container body-container">
 
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
 
         <div class="navbar-brand"><%= link_to 'Oakdrive', root_path %></div>
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Events</a></li>
           <li><a href="#">Subscribe</a></li>
           <li><a href="#">Donate</a></li>
           <li><a href="#">Information</a></li>
+          <li><a href="#"><i class="fa fa-rss fa-lg"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+          <li><a href="#"><i class="fa fa-soundcloud fa-lg"></i></a></li>
         </ul>
       </div>
     </nav>
