--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,19 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
-
  */
+
+ @import "font-awesome-sprockets";
+ @import "font-awesome";
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+
+body {
+  background-color: #DEDED5;
+}
+
+.body-container {
+  padding-top: 75px;
+  background-color: #FFFFFF;
+}
