--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
  @import "bootstrap";
 
 
+
 body {
   background-color: #DEDED5;
 }
@@ -25,4 +26,5 @@ body {
 .body-container {
   padding-top: 75px;
   background-color: #FFFFFF;
+  padding: 80px 80px 80px 80px;
 }
