--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,10 +1,9 @@
 body {
   background-color: #fff;
-  color: blue;
+  color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
-  margin-top: 100px;
 }
 
 p, ol, ul, td {
@@ -65,10 +64,6 @@ div {
     margin-bottom: 0px;
     background-color: #c00;
     color: #fff;
-  }
-
-  h1 {
-    color: green;
   }
 
   ul li {
