--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,19 +12,29 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
 
-        <div class="navbar-brand"><%= link_to 'Oakdrive', root_path %></div>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Subscribe</a></li>
-          <li><a href="#">Donate</a></li>
-          <li><a href="#">Information</a></li>
-          <li><a href="#"><i class="fa fa-rss fa-lg"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
-          <li><a href="#"><i class="fa fa-facebook-official fa-lg"></i></a></li>
-          <li><a href="#"><i class="fa fa-soundcloud fa-lg"></i></a></li>
-        </ul>
-      </div>
-    </nav>
+        <div class="navbar-brand">
+          <%= link_to 'Oakdrive', root_path %>
+        </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to 'Events', events_path %></li>
+            <li class="dropdown">
+              <a href="#" data-toggle="dropdown" class="dropdown-toggle">Subcribe</a>
+              <ul class="dropdown-menu">
+                <li><a href="#">iTunes</a></li>
+                <li><a href="#">RSS Feed</a></li>
+                <li><a href="#">What is RSS?</a></li>
+              </ul>
+            </li>
+
+            <li><a href="#">Donate</a></li>
+            <li><%= link_to "about", "/about"%></li>
+            <li><a href="#"><i class="fa fa-rss fa-lg"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
+            <li><a href="#"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+            <li><a href="https://soundcloud.com/oak-drive" target="_blank"><i class="fa fa-soundcloud fa-lg"></i></a></li>
+          </ul>
+        </div>
+      </nav>
 
 
     <%= yield %>
