--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -10,6 +10,13 @@
       <p>Damn dude these tracks are fiyah. "ask not"?! what? forgetaboutit.</p>
     </div>
 
+    <%= form_tag episodes_path, :method => "get" do %>
+      <p>
+        <%= text_field_tag :search, params[:search], placholder: "search" %>
+        <%= submit_tag "Search", :name => nil %>
+      </p>
+
+    <% end %>
 
       <h1>Episodes</h1>
 
@@ -27,5 +34,6 @@
         </div>
 
         <% end %>
-      </div>
+        <%= will_paginate @episodes%>
     </div>
+  </div>
