--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,30 +1,95 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- */
-
- @import "font-awesome-sprockets";
+@import "font-awesome-sprockets";
  @import "font-awesome";
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
-
+ @font-face {
+   font-family: "Kannada MN";
+   src: url(/assets/KannadaMN.ttc) format("truetype");
+ }
 
 body {
-  background-color: #DEDED5;
+  background-color: #231F20;
+  font-family: "Kannada MN";
+  letter-spacing: 3px;
+  padding:0px 30px 0px 30px;
+}
+h4 {
+  color: #ffffff;
+  font-size: 16px;
 }
 
-.body-container {
-  padding-top: 75px;
-  background-color: #FFFFFF;
+.episodes-container {
+  padding-top: 150px;
+  border-top: 4px solid white;
+  margin-top: 50px;
+}
 
+.logo {
+  padding-right: 28px;
+  border-right: 4px solid #ffffff;
+}
+
+.navbar {
+  height: 200px;
+  padding-top: 40px;
+  border: 0px solid #231F20;
+  background-color: #231F20;
+}
+
+.title {
+  border-bottom: 1px solid #ffffff;
+  width: 200px;
+  padding-bottom: 15px;
+}
+
+.sidebar-section {
+  margin-bottom: 80px;
+}
+
+.fa{
+  padding-right: 5px;
+}
+
+.sidebar {
+  width: 230px;
+}
+
+.search {
+  margin-top: 10px;
+}
+
+.container-fluid {
+  max-width: 1200px;
+}
+
+#search {
+  height: 27px;
+  width: 200px;
+  border-radius: 8px;
+  padding-left: 10px;
+  border: none;
+}
+
+
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+.uneditable-input:focus {
+  border-color: rgba(126, 239, 104, 0.8);
+  box-shadow: none;
+  outline: 0 none;
+  border-width: thin;
 }
