--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,45 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Oakdrive</title>
+  <title>Oakdrive Podcast</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= favicon_link_tag 'Oakdrive_Web_Logo.png' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container body-container">
-
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-
-        <div class="navbar-brand">
-          <%= link_to 'Oakdrive', root_path %>
+  <div class="container-fluid">
+    <div>
+      <div class="hidden-xs hidden-sm navbar navbar-inverse navbar-top" role="navigation">
+        <div class="navbar-header">
+          <div class="navbar-brand navbar-brand-left">
+            <%= image_tag("Oakdrive_Logo.png", height: '90', alt: 'Site Logo', class: "logo") %>
+          </div>
         </div>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to 'Events', events_path %></li>
-            <li class="dropdown">
-              <a href="#" data-toggle="dropdown" class="dropdown-toggle">Subcribe</a>
-              <ul class="dropdown-menu">
-                <li><a href="#">iTunes</a></li>
-                <li><a href="#">RSS Feed</a></li>
-                <li><a href="#">What is RSS?</a></li>
-              </ul>
-            </li>
 
-            <li><a href="#">Donate</a></li>
-            <li><%= link_to "about", "/about"%></li>
-            <li><a href="#"><i class="fa fa-rss fa-lg"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
-            <li><a href="#"><i class="fa fa-facebook-official fa-lg"></i></a></li>
-            <li><a href="https://soundcloud.com/oak-drive" target="_blank"><i class="fa fa-soundcloud fa-lg"></i></a></li>
+
+          <ul class="nav navbar-nav navbar-left">
+            <li><%= link_to "EPISODES", root_path %></li>
+            <li><a href="#">SUBSCRIBE</a></li>
+            <li><a href="#">EVENTS</a></li>
+            <li><a href="#">DONATE</a></li>
+            <li><a href="#">CONTACT</a></li>
           </ul>
+
+      </div>
+    </div>
+    <div class="row">
+
+      <%= yield %>
+
+      <div class="hidden-xs hidden-sm sidebar span-2 col-sm-2 pull-right">
+        <div class="sidebar-section search">
+          <%= form_tag episodes_path, :method => "get" do %>
+            <%= text_field_tag :search, params[:search], :placeholder => "search" %>
+          <% end %>
         </div>
-      </nav>
 
+        <div class="sidebar-section">
+          <h4 class="title">SOCIAL ISH</h4>
+          <i class="fa fa-lg fa-music" aria-hidden="true"></i>
+          <i class="fa fa-lg fa-twitter" aria-hidden="true"></i>
+          <i class="fa fa-lg fa-facebook" aria-hidden="true"></i>
+          <i class="fa fa-lg fa-instagram" aria-hidden="true"></i>
+        </div>
 
-    <%= yield %>
+        <div class="sidebar-section">
+          <h4 class="title">LATEST INSTALLMENTS</h4>
+          <% @latest.sort_by { |i| i.episode_num }[-4..-1].reverse.each do |episode| %>
+            <p><%=link_to episode.title, episode_path(episode)%></p>
+          <% end %>
+        </div>
 
-  </div>
+        <div class="sidebar-section">
+          <h4 class="title">ARCHIVES</h4>
+        </div>
+      </div>
+    </div>
 
 </body>
 </html>
