--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
  }
 
 body {
+  color: white;
   background-color: #231F20;
   font-family: "Kannada MN";
   letter-spacing: 3px;
@@ -37,6 +38,14 @@ h4 {
   background-color: #231F20;
 }
 
+.nav.navbar-nav.navbar-left li a, .cp {
+  color: #ffffff;
+}
+
+.nav.navbar-nav.navbar-left li a:hover {
+  color: grey;
+}
+
 .title {
   border-bottom: 1px solid #ffffff;
   width: 200px;
@@ -45,6 +54,7 @@ h4 {
 
 .sidebar-section {
   margin-bottom: 80px;
+  color: #ffffff;
 }
 
 .fa{
@@ -64,6 +74,8 @@ h4 {
 }
 
 #search {
+  color: black;
+  margin-top: -110px;
   height: 27px;
   width: 200px;
   border-radius: 8px;
