--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,8 +35,12 @@ h4 {
 
 }
 
+#content-container {
+  margin-top: 100px;
+}
+
 .navbar {
-  height: 200px;
+  height: 100px;
   padding-top: 40px;
   border: 0px solid #231F20;
   background-color: #231F20;
@@ -45,7 +49,7 @@ h4 {
 .nav.navbar-nav.navbar-left {
   margin-top: -110px;
   margin-left: 125px;
-  width: 600px;
+  width: 800px;
 }
 
 .nav.navbar-nav.navbar-left li a {
@@ -59,9 +63,9 @@ h4 {
   position: static;
 
 }
-.nav.navbar-nav.navbar-left li a:hover {
-  color: grey;
-}
+//.nav.navbar-nav.navbar-left li a:hover {
+//  color: grey;
+//}
 
 .title {
   border-bottom: 1px solid #ffffff;
@@ -80,7 +84,8 @@ h4 {
 
 .sidebar {
   width: 230px;
-//margin-top: -90px;
+  margin-top: 0px;
+
 }
 
 .search {
