--- a/app/views/episodes/_form.html.erb
+++ b/app/views/episodes/_form.html.erb
@@ -31,6 +31,12 @@
     <%= f.label :link %><br>
     <%= f.text_field :link %>
   </div>
+
+  <div class="field">
+    <%= f.label :mp3 %><br>
+    <%= f.file_field :mp3 %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
