--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -1,29 +1,51 @@
+<div class="col-sm-4" id="content-container">
 
-  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+    <div id="jp_container_1" class="jp-audio">
+      <div class="jp-type-single">
 
-  <p>
-    <strong>Title:</strong>
-    <%= @episode.title %>
-  </p>
+          <div class="jp-gui jp-interface">
+            <ul class="jp-controls">
+              <li><a href="javascript:;" class="jp-play" tabindex="1">&#61515;</a></li>
+              <li><a href="javascript:;" class="jp-pause" tabindex="1">&#61516;</a></li>
+              <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">&#61480;</a></li>
+              <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">&#61478;</a></li>
+            </ul>
+            <div class="jp-progress">
+              <div class="jp-seek-bar">
+                <div class="jp-play-bar"></div>
+              </div>
+            </div>
+            <div class="jp-time-holder">
+              <div class="jp-current-time"></div>
+            </div>
+            <div class="jp-volume-bar">
+              <div class="jp-volume-bar-value"></div>
+            </div>
 
-  <p>
-    <strong>Description:</strong>
-    <%= @episode.description %>
-  </p>
+          <div class="jp-no-solution">
+            <span>Update Required</span>
+            To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-  <p>
-    <strong>Guests:</strong>
-    <%= @episode.guests %>
-  </p>
 
-  <p>
-    <strong>Episode Num:</strong>
-    <%= @episode.episode_num %>
-  </p>
-
-  <p>
-  </p>
-  <%= link_to 'Edit', edit_episode_path(@episode) %> |
-  <%= link_to 'Back', episodes_path %>
-  <% link = @episode.link %>
-  <iframe width="100%" height="750" scrolling="no" frameborder="no" src="<%= @episode.link %>"></iframe>
+<script type="text/javascript">
+$(document).ready(function(){
+    $("#jquery_jplayer_1").jPlayer({
+      ready: function () {
+        $(this).jPlayer("setMedia", {
+          mp3: "<%= @episode.mp3 %>",
+          oga: "<%= @episode.mp3 %>"
+        });
+      },
+      swfPath: "/js",
+      supplied: "mp3,oga"
+    });
+  });
+</script>
