--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,9 @@
         </div>
       </div>
     </div>
-
+    <%= %>
+    <div class="row" id="footer">
+      <p> < Prev PUBLISHED ON:   FROM:   PRODUCER: MOSIAH RASHAAD Next ></p>
+    </div>
 </body>
 </html>
