--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,12 @@
-  <h3>ABOUT</h3>
+
+  <h3 class="title-spacing index-alignment"
+      style="margin-bottom:45px;">ABOUT</h3>
   <p>
     Oakdrive is a podcast that illustrates the experience thru the personality via the sound.
     <br>
     <br>
 
-    weilding a stoytelling based design, at it's core lies a unique candor that emanates froms triking personalities
+    weilding a stoytelling based design, at it's core lies a unique candor that emanates from striking personalities
     of the everyday people. Coupled with the artistries of musicians/sound engineers alike
     a hint of gallows humor, Oakdrive is a preservation as well as a presentation of a culture
     that I am lucky enough to be a part of.
