--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -1,19 +1,24 @@
-  <h3>SUBSCRIBE</h3>
-  <p>
-    Hola. You can subscribe to Oakdrive
-    several ways
-    <br>
-    <br>
-    Search for Oakdrive via podcast apps
-    Strichers, Pocket Casts, etc
-    <br>
-    <br>
-    Subscribe via iTunes
-    <br>
-    <br>
-    Copy and paste this feed into your
-    podcast player:
-    <br>
-    <br>
-    http//feed.wegoingtooakdrive.com/oak-drivepodcast
-  </p>
+
+
+  <h3 class="title-spacing index-alignment"
+      style="margin-bottom:45px;">SUBSCRIBE</h3>
+    <p>
+      Hola. You can subscribe to Oakdrive
+      several ways
+      <br>
+      <br>
+      Search for Oakdrive via podcast apps
+      Stitcher, Pocket Casts, etc
+      <br>
+      <br>
+      Subscribe via iTunes
+      <br>
+      <br>
+      Copy and paste this feed into your
+      podcast player:
+      <br>
+      <br>
+      <span class="hidden-xs">http//feed.wegoingtooakdrive.com/oak-drivepodcast</span>
+      <span class="hidden-sm hidden-md hidden-lg hidden-xl">http//feed.wegoingtooakdrive.com<br>
+      /oak-drivepodcast</span>
+    </p>
