--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,9 @@
-  <h3>CONTACT</h3>
+
+  <h3 class="title-spacing index-alignment"
+      style="margin-bottom:45px;">CONTACT</h3>
   <p>
     SPONSORSHIPS
+    <br>
     oakdrivepodcast@gmail.com
     <br>
     Subject: Sponsorship
