--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,6 +93,7 @@ h4 {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .container-fluid {
@@ -341,12 +342,96 @@ a {
 //mobile
 
 #social-mobile {
-  margin-top: 10px;
   border-bottom: 1px solid white;
-  width: 240px;
+  width: 230px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 15px;
   padding-top: 5px;
+}
+
+
+//Dropdown menu
+.dropbtn {
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  z-index: 800;
+  background-color: #231F20;
+}
+
+.dropdown-button-container{
+  width: 100%;
+}
+
+.dropdown {
+  display: inline-block;
+  z-index: 800;
+  margin: 0;
+  background: yellow;
+  position: absolute;
+  left: 50%;
+  top: 50px;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #231F20;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 800;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-box-shadow: 4px 3px 4px 3px rgba(0,0,0,.3);
+  -moz-box-shadow:    4px 3px 4px 3px rgba(0,0,0,.3);
+  box-shadow:         4px 3px 4px 3px rgba(0,0,0,.3);
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content li {
+  list-style: none;
+
+}
+
+.dropdown-content a:hover {
+  background-color: #ccc;
+  z-index: 800;
+
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  z-index: 800;
+}
+
+.dropdown:hover .dropbtn {
+  z-index: 800;
+}
+
+.icon-bar {
+  background-color: white;
+  height: 3px;
+  width: 20px;
+  margin: 3px;
+}
+
+.mobile-search i {
+  margin-top: 10px;
+  font-size: 20px;
+  margin-left: 14px;
+  margin-right: 14px;
 }
