--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,18 +1,20 @@
 @import "font-awesome-sprockets";
- @import "font-awesome";
- @import "bootstrap-sprockets";
- @import "bootstrap";
+@import "font-awesome";
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import url(https://fonts.googleapis.com/css?family=Khula:400,800);
+@font-face {
+  font-family: "Kannada MN";
+  src: url('/assets/KannadaMN.woff') format("truetype");
 
- @font-face {
-   font-family: "Kannada MN";
-   src: url(/assets/KannadaMN.ttc) format("truetype");
- }
+}
 
 
 body {
   color: white;
   background-color: #231F20;
-  font-family: "Kannada MN";
+  font-family: 'Khula', sans-serif;
+  font-weight: 500;
   letter-spacing: 3px;
   padding:0px 30px 0px 30px;
 }
@@ -100,7 +102,7 @@ h4 {
   max-width: 1200px;
 }
 
-#search {
+#query {
   color: black;
   height: 27px;
   width: 200px;
@@ -126,6 +128,7 @@ input[type="email"]:focus,
 input[type="url"]:focus,
 input[type="search"]:focus,
 input[type="tel"]:focus,
+input[type="query"]:focus,
 input[type="color"]:focus,
 .uneditable-input:focus {
   border-color: rgba(126, 239, 104, 0.8);
