--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -2,7 +2,7 @@
 
   <h3 class="title-spacing index-alignment" style="margin-bottom:30px;">EPISODES<span style="font-size:17px;letter-spacing:4px;">S-01</span></h3>
 
-    <% @episodes.each do |episode| %>
+    <% @episodes.sort.each do |episode| %>
       <div class="index-alignment">
         <%= link_to image_tag(episode.image.url(:medium)), episode %>
       </div>
