--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,15 +82,36 @@
       </div>
     </div>
     <% if params[:controller] == 'episodes' && %w(show).include?(params[:action]) %>
-      <div id="footer">
-          <p id="prev">< Prev</p>
-          <p id="next">Next ></p>
 
+
+      <div id="footer">
+        <div style="margin-right:auto;width:50px;">
+          <% if @episode != @episodes.first %>
+            <%= link_to(@episodes[(@episodes.index(@episode)-1)]) do %>
+              <p id="prev">< Prev</p>
+            <% end %>
+          <% end %>
+        </div>
+        <div style="margin-left:auto;width:50px;">
+          <% if @episode != @episodes.last %>
+            <%= link_to(@episodes[(@episodes.index(@episode)+1)]) do %>
+              <p id="next">Next ></p>
+            <% end %>
+          <% end %>
+        </div>
           <p id="footer-center">
+            <br class="hidden-sm hidden-md hidden-lg hidden-xl">
             <span id="published">PUBLISHED ON: <%= @episode.created_at.strftime("%m.%d.%Y") %></span>
+
+            <br class="hidden-sm hidden-md hidden-lg hidden-xl">
             <span id="season">FROM: SEASON 01</span>
+            <br class="hidden-sm hidden-md hidden-lg hidden-xl">
+
             <span id="producer">PRODUCER: MOSIAH RASHAAD</span>
           </p>
+
+
+
       </div>
       <% end %>
 
