--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -63,9 +63,13 @@ $(document).ready(function(){
      },
      cssSelectorAncestor: "#jp_container_1",
      swfPath: "/js",
-     supplied: "m4a",
-     keyEnabled: true,
-     remainingDuration: true
+     supplied: "m4a, oga",
+   		wmode: "window",
+   		useStateClassSkin: true,
+   		autoBlur: false,
+   		keyEnabled: true,
+   		remainingDuration: true,
+   		toggleDuration: true
    });
  });
 
