--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -58,18 +58,20 @@ $(document).ready(function(){
    $("#jquery_jplayer_1").jPlayer({
      ready: function () {
        $(this).jPlayer("setMedia", {
-         m4a: "<%= @episode.mp3 %>"
+         m4a: "<%= @episode.mp3 %>",
+         mp3: "<%= @episode.mp3 %>",
+         ogg: "<%= @episode.mp3 %>"
        });
      },
-     cssSelectorAncestor: "#jp_container_1",
-     swfPath: "/js",
-     supplied: "m4a, oga",
+      cssSelectorAncestor: "#jp_container_1",
+      swfPath: "/js",
+      supplied: "m4a, oga, mp3",
    		wmode: "window",
    		useStateClassSkin: true,
    		autoBlur: false,
    		keyEnabled: true,
    		remainingDuration: true,
-   		toggleDuration: true
+   		toggleDuration: true,
    });
  });
 
