recent tab and page added

--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -60,7 +60,7 @@ $(document).ready(function(){
        $(this).jPlayer("setMedia", {
          m4a: "<%= @episode.mp3 %>",
          mp3: "<%= @episode.mp3 %>",
-         ogg: "<%= @episode.mp3 %>"
+         oga: "<%= @episode.mp3 %>"
        });
      },
       cssSelectorAncestor: "#jp_container_1",
