--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-
+<div class="col-sm-12 col-md-8" id="content-container">
   <h3 class="title-spacing index-alignment"
       style="margin-bottom:45px;">ABOUT</h3>
   <p>
@@ -15,3 +15,4 @@
     It is my testament to the times, its changes and the constant ambiguity life offers up.
     If nothing else, let this work serve simply as an added tool to your arsenal.
   </p>
+</div>
