--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -1,4 +1,5 @@
 
+<div class="col-sm-12 col-md-8" id="content-container">
 
   <h3 class="title-spacing index-alignment"
       style="margin-bottom:45px;">SUBSCRIBE</h3>
@@ -22,3 +23,4 @@
       <span class="hidden-sm hidden-md hidden-lg hidden-xl">http//feed.wegoingtooakdrive.com<br>
       /oak-drivepodcast</span>
     </p>
+</div>
