--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,6 @@
+
+<div class="col-sm-8" id="content-container">
+
   <p id="notice"><%= notice %></p>
 
   <h1>Listing Events</h1>
@@ -29,3 +32,4 @@
   <br>
 
   <%= link_to 'New Event', new_event_path %>
+</div>
